--- a/class-12-canvas-chartjs/demo-build-yesterday/index.html
+++ b/class-12-canvas-chartjs/demo-build-yesterday/index.html
@@ -15,7 +15,7 @@
     </section>
 
     <ul id="picList"></ul>
-    <script src="js/app.js" type="text/javascript"></script>
+    <script src="js/alternate.js" type="text/javascript"></script>
   </body>
 
 </html>
