--- a/class-12-canvas-chartjs/demo-chartjs-prince/index.html
+++ b/class-12-canvas-chartjs/demo-chartjs-prince/index.html
@@ -11,7 +11,7 @@
 
     <h1>What is our favorite Prince song?</h1>
 
-    <div id="voting">
+    <section id="voting">
       <h2>Click to vote on your favorite of these songs:</h2>
       <button id="purplerain">Purple Rain</button>
       <button id="letswork">Let's Work</button>
@@ -21,7 +21,7 @@
       <p class="inline-p">Then...</p>
       <button id="draw-chart">Click here to see a chart!</button>
       <button id="list-button">Or a lame old list</button>
-    </div>
+    </section>
 
     <ul id="funky-list"></ul>
 
